--- a/mod/index.html
+++ b/mod/index.html
@@ -47,8 +47,11 @@
             complete: function(results) {
                 const data = results.data;
 
+                // Create an array of objects with original index
+                const indexedData = data.map((row, index) => ({ ...row, originalIndex: index }));
+
                 // Sort data by timestamp (newest first)
-                data.sort((a, b) => new Date(b['Timestamp']) - new Date(a['Timestamp']));
+                indexedData.sort((a, b) => new Date(b['Timestamp']) - new Date(a['Timestamp']));
 
                 const tableBody = document.getElementById("applicationTable");
 
@@ -56,7 +59,7 @@
                 document.getElementById('loadingSpinner').style.display = 'none';
                 document.querySelector('.container').style.display = 'block';
 
-                data.forEach((row, index) => {
+                indexedData.forEach((row) => {
                     const tr = document.createElement("tr");
 
                     tr.innerHTML = `
@@ -66,7 +69,7 @@
                         <td>${row['What is your server account ID?']}</td>
                         <td>${row['What is your name on the forum?']}</td>
                         <td>${row['What is your Discord username?']}</td>
-                        <td><a href="details.html?id=${index}" class="btn details-btn">Details</a></td>
+                        <td><a href="details.html?id=${row.originalIndex}" class="btn details-btn">Details</a></td>
                     `;
 
                     tableBody.appendChild(tr);
