--- a/helper/details.html
+++ b/helper/details.html
@@ -9,31 +9,50 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
 <body>
+
     <div class="back-btn">
-        <button onclick="goBack()">Back to Applications</button>
+        <button onclick="goBack()" class="btn btn-secondary">Back to Applications</button>
     </div>
-    <div class="container">
-        <h1>Application Details
-            <button class="print-btn" onclick="printPage()" style="float: right; background-color: #007bff; color: white; border: none; border-radius: 5px; padding: 5px 10px; cursor: pointer;">
+
+    <!-- Loading Spinner -->
+    <div id="loadingSpinner" class="spinner-container" style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+        <div class="spinner-border text-primary" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+
+    <div class="container" style="display: none; position: relative;">
+        <h1>Helper Application Details
+            <button class="print-btn" onclick="printPage()">
                 Print
             </button>
         </h1>
 
-        <!-- Loading Spinner -->
-        <div id="loadingSpinner" class="spinner-container">
-            <div class="spinner-border text-primary" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
-        </div>
-
         <!-- Container for the key details -->
-        <div id="keyDetails" class="key-details" style="display: none;">
+        <div id="keyDetails" class="key-details">
+            <!-- Button to copy the Discord message (Absolute positioned) -->
+            <button id="copyDiscordMessageBtn" class="copy-discord-btn">Copy Discord Message</button>
             <!-- Key details will be populated here -->
         </div>
 
         <!-- Container for the rest of the details -->
-        <div id="details" class="details-section" style="display: none;">
-            <!-- Additional details will be populated here -->
+        <div id="details" class="details-section">
+            <div class="general-section">
+                <h1>General Information</h1>
+                <div id="generalInfo">
+                    <!-- General Information details will be populated here -->
+                    <button id="copyGeneralInfoBtn" class="copy-discord-btn">Copy Discord Message</button>
+                </div>
+            </div>
+            
+            <div class="general-section">
+                <h1>Helper Questions</h1>
+                <div id="helperQuestions">
+                    <!-- Helper specific questions will be populated here -->
+                    <button id="copyHelperQuestionsBtn" class="copy-discord-btn">Copy Discord Message</button>
+                </div>
+            </div>
+
         </div>
     </div>
 
@@ -46,30 +65,19 @@
 
         // Function to copy text to clipboard
         function copyToClipboard(text) {
-            navigator.clipboard.writeText(text).then(() => {
-                alert("Copied to clipboard: " + text);
-            });
+            const textArea = document.createElement('textarea');
+            textArea.value = text;
+            document.body.appendChild(textArea);
+            textArea.select();
+            document.execCommand('copy');
+            document.body.removeChild(textArea);
+            alert("Copied to clipboard: " + text);
         }
 
-        // Function to create a key detail with a copy button
-        function createKeyDetail(label, value, addCopyButton = true) {
+        // Function to create a key detail without a copy button
+        function createKeyDetail(label, value) {
             const detail = document.createElement('p');
-            const valueWrapper = document.createElement('div');
-            valueWrapper.className = 'value-and-button';
-
-            // Add the value
-            valueWrapper.innerHTML = `<strong>${label}:</strong> <span>${value}</span>`;
-
-            // Conditionally add the copy button (skip for Timestamp)
-            if (addCopyButton) {
-                const copyButton = document.createElement('button');
-                copyButton.className = 'copy-btn';
-                copyButton.innerText = 'Copy';
-                copyButton.onclick = () => copyToClipboard(value);
-                valueWrapper.appendChild(copyButton);
-            }
-
-            detail.appendChild(valueWrapper);
+            detail.innerHTML = `<strong>${label}:</strong> <span>${value}</span>`;
             return detail;
         }
 
@@ -88,34 +96,77 @@
             download: true,
             header: true,
             complete: function(results) {
-                const data = results.data;
+                const data = results.data[applicationId];
                 const keyDetailsDiv = document.getElementById("keyDetails");
-                const detailsDiv = document.getElementById("details");
-
-                // Get the specific application using the applicationId
-                const applicationData = data[applicationId];
+                const generalInfoDiv = document.getElementById("generalInfo");
+                const helperQuestionsDiv = document.getElementById("helperQuestions");
 
                 // Hide spinner and show content once data is loaded
                 document.getElementById('loadingSpinner').style.display = 'none';
-                keyDetailsDiv.style.display = 'block';
+                document.querySelector('.container').style.display = 'block';
 
-                // Display key details with specific labels (without copy button for Timestamp)
-                keyDetailsDiv.appendChild(createKeyDetail('Timestamp', applicationData['Timestamp'], false));
-                keyDetailsDiv.appendChild(createKeyDetail('Email', applicationData['Email Address']));
-                keyDetailsDiv.appendChild(createKeyDetail('In-Game Name', applicationData['What is your in-game name?']));
-                keyDetailsDiv.appendChild(createKeyDetail('Account ID', applicationData['What is your server account ID?']));
+                // Display key details without copy buttons
+                keyDetailsDiv.appendChild(createKeyDetail('Timestamp', data['Timestamp']));
+                keyDetailsDiv.appendChild(createKeyDetail('In-Game Name', data['What is your in-game name?']));
+                keyDetailsDiv.appendChild(createKeyDetail('Account ID', data['What is your server account ID?']));
+                keyDetailsDiv.appendChild(createKeyDetail('Email', data['Email Address']));
 
-                // Display the rest of the details
-                for (let key in applicationData) {
-                    if (!['Timestamp', 'Email Address', 'What is your in-game name?', 'What is your server account ID?'].includes(key)) {
-                        const p = document.createElement("p");
-                        p.className = "detail-item";
-                        p.innerHTML = `<strong>${key}:</strong> ${applicationData[key]}`;
-                        detailsDiv.appendChild(p);
-                    }
-                }
+                // Prepare the message for Discord (Key Details)
+                const discordMessage = `# Helper application - ${data['What is your in-game name?']}\n` +
+                    '```yaml\n' +
+                    `Application date: '${data['Timestamp']}'\n` +
+                    `Name: ${data['What is your in-game name?']}\n` +
+                    `AID: ${data['What is your server account ID?']}\n` +
+                    `Email: ${data['Email Address']}\n` +
+                    '```';
 
-                detailsDiv.style.display = 'block';
+                // Add copy to clipboard functionality to the Discord message button
+                document.getElementById("copyDiscordMessageBtn").onclick = function() {
+                    copyToClipboard(discordMessage);
+                };
+
+                // Display General Information
+                const generalFields = [ 'For how long have you played SA-MP?', 'For how long have you played MCNR?', 'Do you have any experience being a member of staff on any other SA-MP server, or any other game server for that matter?', 'What languages can you speak?' ];
+
+                generalFields.forEach(field => {
+                    const p = document.createElement("p");
+                    p.className = "detail-item";
+                    p.innerHTML = `<strong>${field}:</strong> ${data[field]}`;
+                    generalInfoDiv.appendChild(p);
+                });
+
+                // Prepare the General Information Discord message
+                let generalInfoMessage = "# General information\n";
+                generalFields.forEach(field => {
+                    generalInfoMessage += `Q-  **${field}** \n\`\`\`diff\n${data[field]}\n\`\`\`\n`;
+                });
+
+                // Add copy to clipboard functionality for General Information
+                document.getElementById("copyGeneralInfoBtn").onclick = function() {
+                    copyToClipboard(generalInfoMessage);
+                };
+
+                // Display Helper Questions
+                const helperFields = ['Do you meet the following requirements?', 'My friend got banned for cheating, can you unban them?', 'I bought a car and got charged, but the car is not in my garage!', 'I am struggling to find the last 3 oysters. Can you help me find them?', 'I keep losing money because people keep robbing me. What can I do?', 'Every time I try to rob the bank I get arrested. What should I do to have better luck robbing the bank?', 'My game crashes every time I am sent to jail in Los Santos. Can you help?', 'I have forgotten the password to my account. Can you reset it for me?', 'I donated but my donation has not been verified. Can you help?', 'I installed the audio plugin but it isn\'t working.', 'How can I show the recent deaths on the screen like on some servers do on the right side of the screen?', 'Why do I lose my guns when I go to jail? How can I get them back?', 'Why does the tazer never work when I\'m a cop? It says out of range every time.', 'How do I apply to be an admin?', 'In as many words as possible, why do you want to be an MCNR helper?' ];
+
+                helperFields.forEach(field => {
+                    const p = document.createElement("p");
+                    p.className = "detail-item";
+                    p.innerHTML = `<strong>${field}:</strong> ${data[field]}`;
+                    helperQuestionsDiv.appendChild(p);
+                });
+
+
+                let helperQuestionsMessage = "# Helper Questions\n";
+                helperFields.forEach(field => {
+                    helperQuestionsMessage += `Q-  **${field}** \n\`\`\`diff\n${data[field]}\n\`\`\`\n`;
+                });
+
+                // Add copy to clipboard functionality for Helper Questions
+                document.getElementById("copyHelperQuestionsBtn").onclick = function() {
+                    copyToClipboard(helperQuestionsMessage);
+                };
+
             }
         });
     </script>
