--- a/index.html
+++ b/index.html
@@ -3,61 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCNR Applications</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <title>Login</title>
     <style>
         body {
-            background-color: #f8f9fa;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .app-button {
-            width: 200px;
-            height: 100px;
-            font-size: 20px;
             display: flex;
-            align-items: center;
             justify-content: center;
-            margin: 20px auto;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .login-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
             text-align: center;
+        }
+        input[type="password"], button {
+            display: block;
+            padding: 10px;
+            margin: 10px 0;
+            max-width: 300px;
+        }
+        .disconnect-btn {
+            margin-top: 20px;
+            background-color: #d9534f;
             color: white;
-            text-decoration: none; /* Remove underline from links */
+            border: none;
+            cursor: pointer;
+            padding: 10px;
+            width: 100%;
+            max-width: 300px;
         }
-        .btn-tester {
-            background-color: #007bff; /* Blue for Tester */
-        }
-        .btn-mod {
-            background-color: #f4882c; /* Orange for Moderator */
-        }
-        .btn-helper {
-            background-color: #83a01d; /* Green for Helper */
-        }
-        .btn i {
-            margin-right: 8px; /* Space between icon and text */
+        .disconnect-btn:hover {
+            background-color: #c9302c;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>MCNR Applications</h1>
-
-        <a href="mod/index.html" target="_blank" class="btn app-button btn-mod">
-            <i class="fas fa-user-shield"></i>Mod Applications
-        </a>
-        <a href="tester/index.html" target="_blank" class="btn app-button btn-tester">
-            <i class="fas fa-user-check"></i>Tester Applications
-        </a>
-
-        <a href="helper/index.html" target="_blank" class="btn app-button btn-helper">
-            <i class="fas fa-user-friends"></i>Helper Applications
-        </a>
+    <div class="login-container">
+        <h2>Login</h2>
+        <input type="password" id="password" placeholder="Enter password">
+        <button onclick="login()">Login</button>
+        <p id="error" style="color:red;"></p>
+        <button class="disconnect-btn" id="disconnectBtn" onclick="disconnect()" style="display:none;">Disconnect</button>
     </div>
+
+    <script>
+        const PASSWORD = "RockstarNorth69*"; // Your static password
+        const SESSION_DURATION = 60 * 60 * 1000; // 1 hour
+
+        function login() {
+            const enteredPassword = document.getElementById("password").value;
+            const errorElement = document.getElementById("error");
+
+            if (enteredPassword === PASSWORD) {
+                // Set session expiration time
+                const sessionExpiry = Date.now() + SESSION_DURATION;
+                localStorage.setItem("sessionExpiry", sessionExpiry);
+
+                // Redirect to protected folder
+                window.location.href = '/protected/';
+            } else {
+                errorElement.textContent = "Incorrect password. Please try again.";
+            }
+        }
+
+        function disconnect() {
+            // Clear session data and reload the page
+            localStorage.removeItem("sessionExpiry");
+            window.location.href = '/';
+        }
+
+        // Auto redirect if already logged in
+        window.onload = function () {
+            const sessionExpiry = localStorage.getItem("sessionExpiry");
+            const disconnectBtn = document.getElementById("disconnectBtn");
+
+            if (sessionExpiry && Date.now() < sessionExpiry) {
+                // If session exists, show disconnect button
+                disconnectBtn.style.display = "block";
+                window.location.href = '/protected/'; // Redirect to default protected page
+            }
+        };
+    </script>
 </body>
 </html>
