--- a/protected/tester/index.html
+++ b/protected/tester/index.html
@@ -1,3 +1,16 @@
+<script>
+  function checkSession() {
+      const sessionExpiry = localStorage.getItem("sessionExpiry");
+
+      const currentTime = new Date().getTime();
+
+      if (!sessionExpiry || currentTime > sessionExpiry) {
+          window.location.href = "/index.html";
+      }
+  }
+
+  checkSession();
+</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
