--- a/protected/index.html
+++ b/protected/index.html
@@ -5,7 +5,7 @@
         const currentTime = new Date().getTime();
 
         if (!sessionExpiry || currentTime > sessionExpiry) {
-            window.location.href = "/index.html";
+            window.location.href = "../index.html";
         }
     }
 
