--- a/protected/index.html
+++ b/protected/index.html
@@ -100,7 +100,7 @@
             localStorage.removeItem("sessionExpiry");
 
             // Redirect to the root (main login page)
-            window.location.href = "/index.html";
+            window.location.href = "../index.html";
         }
     </script>
 </body>
