--- a/protected/helper/index.html
+++ b/protected/helper/index.html
@@ -32,6 +32,7 @@
 
     <div class="container" style="display: none;">
         <h1>MCNR Helper Applications</h1>
+        <p id="applicationsCount" style="font-weight: bold;"></p>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -65,24 +66,53 @@
                 indexedData.sort((a, b) => new Date(b['Timestamp']) - new Date(a['Timestamp']));
 
                 const tableBody = document.getElementById("applicationTable");
+                const currentMonth = new Date().getMonth();
+                const currentYear = new Date().getFullYear();
 
-                // Hide spinner and show content once data is loaded
-                document.getElementById('loadingSpinner').style.display = 'none';
-                document.querySelector('.container').style.display = 'block';
+                let applicationsThisMonth = 0;
 
                 indexedData.forEach((row) => {
-                    const tr = document.createElement("tr");
+                    const timestamp = new Date(row['Timestamp']);
+                    const applicationMonth = timestamp.getMonth();
+                    const applicationYear = timestamp.getFullYear();
 
-                    tr.innerHTML = `
-                        <td>${row['Timestamp']}</td>
-                        <td>${row['Email Address']}</td>
-                        <td>${row['What is your in-game name?']}</td>
-                        <td>${row['What is your server account ID?']}</td>
-                        <td><a href="details.html?id=${row.originalIndex}" class="btn details-btn">Details</a></td>
-                    `;
+                    // Check if the application was submitted this month
+                    if (applicationMonth === currentMonth && applicationYear === currentYear) {
+                        applicationsThisMonth++;
 
-                    tableBody.appendChild(tr);
+                        const tr = document.createElement("tr");
+                        tr.classList.add("new-application");  // Apply 'new-application' style to rows from this month
+
+                        tr.innerHTML = `
+                            <td>${row['Timestamp']}</td>
+                            <td>${row['Email Address']}</td>
+                            <td>${row['What is your in-game name?']}</td>
+                            <td>${row['What is your server account ID?']}</td>
+                            <td><a href="details.html?id=${row.originalIndex}" class="btn details-btn">Details</a></td>
+                        `;
+
+                        tableBody.appendChild(tr);
+                    } else {
+                        const tr = document.createElement("tr");
+
+                        tr.innerHTML = `
+                            <td>${row['Timestamp']}</td>
+                            <td>${row['Email Address']}</td>
+                            <td>${row['What is your in-game name?']}</td>
+                            <td>${row['What is your server account ID?']}</td>
+                            <td><a href="details.html?id=${row.originalIndex}" class="btn details-btn">Details</a></td>
+                        `;
+
+                        tableBody.appendChild(tr);
+                    }
                 });
+
+                // Display the number of applications this month
+                document.getElementById('applicationsCount').textContent = `Number of applications this month: ${applicationsThisMonth}`;
+
+                // Hide spinner and show the content
+                document.getElementById('loadingSpinner').style.display = 'none';
+                document.querySelector('.container').style.display = 'block';
             }
         });
     </script>
