--- a/protected/mod/index.html
+++ b/protected/mod/index.html
@@ -32,6 +32,7 @@
 
     <div class="container" style="display: none;">
         <h1>MCNR Moderator Applications</h1>
+        <p id="applicationsCount" style="font-weight: bold;"></p>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -53,40 +54,66 @@
     <script>
         const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vT6TU6LIBKQ8qGq8OsH2lFc2rxbe1zB7Lm4Rigkbk0GFwr54zWY2p0YLUTQEx8d4pKl5Yiw0T9_0By7/pub?output=csv";
 
-        // Start loading the data
         Papa.parse(csvUrl, {
             download: true,
             header: true,
             complete: function(results) {
                 const data = results.data;
 
-                // Create an array of objects with original index
                 const indexedData = data.map((row, index) => ({ ...row, originalIndex: index }));
-
-                // Sort data by timestamp (newest first)
                 indexedData.sort((a, b) => new Date(b['Timestamp']) - new Date(a['Timestamp']));
 
                 const tableBody = document.getElementById("applicationTable");
+                const currentMonth = new Date().getMonth();
+                const currentYear = new Date().getFullYear();
 
-                // Hide spinner and show content once data is loaded
-                document.getElementById('loadingSpinner').style.display = 'none';
-                document.querySelector('.container').style.display = 'block';
+                let applicationsThisMonth = 0;
 
                 indexedData.forEach((row) => {
-                    const tr = document.createElement("tr");
+                    const timestamp = new Date(row['Timestamp']);
+                    const applicationMonth = timestamp.getMonth();
+                    const applicationYear = timestamp.getFullYear();
 
-                    tr.innerHTML = `
-                        <td>${row['Timestamp']}</td>
-                        <td>${row['Email Address']}</td>
-                        <td>${row['What is your name on the server?']}</td>
-                        <td>${row['What is your server account ID?']}</td>
-                        <td>${row['What is your name on the forum?']}</td>
-                        <td>${row['What is your Discord username?']}</td>
-                        <td><a href="details.html?id=${row.originalIndex}" class="btn details-btn">Details</a></td>
-                    `;
+                    // Check if the application was submitted this month
+                    if (applicationMonth === currentMonth && applicationYear === currentYear) {
+                        applicationsThisMonth++;
 
-                    tableBody.appendChild(tr);
+                        const tr = document.createElement("tr");
+                        tr.classList.add("new-application");  // Apply the 'new-application' style to rows from this month
+
+                        tr.innerHTML = `
+                            <td>${row['Timestamp']}</td>
+                            <td>${row['Email Address']}</td>
+                            <td>${row['What is your name on the server?']}</td>
+                            <td>${row['What is your server account ID?']}</td>
+                            <td>${row['What is your name on the forum?']}</td>
+                            <td>${row['What is your Discord username?']}</td>
+                            <td><a href="details.html?id=${row.originalIndex}" class="btn details-btn">Details</a></td>
+                        `;
+
+                        tableBody.appendChild(tr);
+                    } else {
+                        const tr = document.createElement("tr");
+
+                        tr.innerHTML = `
+                            <td>${row['Timestamp']}</td>
+                            <td>${row['Email Address']}</td>
+                            <td>${row['What is your name on the server?']}</td>
+                            <td>${row['What is your server account ID?']}</td>
+                            <td>${row['What is your name on the forum?']}</td>
+                            <td>${row['What is your Discord username?']}</td>
+                            <td><a href="details.html?id=${row.originalIndex}" class="btn details-btn">Details</a></td>
+                        `;
+
+                        tableBody.appendChild(tr);
+                    }
                 });
+
+                // Display the number of applications this month
+                document.getElementById('applicationsCount').textContent = `Number of applications this month: ${applicationsThisMonth}`;
+
+                document.getElementById('loadingSpinner').style.display = 'none';
+                document.querySelector('.container').style.display = 'block';
             }
         });
     </script>
